--- a/age-calculator-app-main/index.html
+++ b/age-calculator-app-main/index.html
@@ -25,19 +25,19 @@
     <div class="main-container">
       <div class="inputs">
         <div class="part">
-        <span class="dmy">Day</span>
-        <input type="text" />
-      </div>
+          <span class="dmy">Day</span>
+          <input type="text" />
+        </div>
         <div class="part">
-        <span class="dmy">Month</span>
-        <input type="text" />
-      </div>
+          <span class="dmy">Month</span>
+          <input type="text" />
+        </div>
         <div class="part">
-        <span class="dmy">Year</span>
-        <input type="text" />
+          <span class="dmy">Year</span>
+          <input type="text" />
+        </div>
       </div>
-      </div>
-      <div class="devider">
+      <div class="divider">
         <div class="line"></div>
         <div class="circle">
           <svg
@@ -53,11 +53,11 @@
             </g>
           </svg>
         </div>
-        <div class="calculation">
-          <div class="year-calc"><span class="number">69</span> years</div>
-          <div class="month-calc"><span class="number">69</span> months</div>
-          <div class="day-calc"><span class="number">69</span> days</div>
-        </div>
+      </div>
+      <div class="calculation">
+        <div class="year-calc"><span class="number">- -</span> years</div>
+        <div class="month-calc"><span class="number">- -</span> months</div>
+        <div class="day-calc"><span class="number">- -</span> days</div>
       </div>
     </div>
     <script src="/app.js"></script>
