--- a/age-calculator-app-main/index.html
+++ b/age-calculator-app-main/index.html
@@ -26,15 +26,15 @@
       <div class="inputs">
         <div class="part">
           <span class="dmy">Day</span>
-          <input type="text" />
+          <input type="text" placeholder="dd" />
         </div>
         <div class="part">
           <span class="dmy">Month</span>
-          <input type="text" />
+          <input type="text" placeholder="mm" />
         </div>
         <div class="part">
           <span class="dmy">Year</span>
-          <input type="text" />
+          <input type="text" placeholder="yyyy" />
         </div>
       </div>
       <div class="divider">
