--- a/age-calculator-app-main/index.html
+++ b/age-calculator-app-main/index.html
@@ -66,6 +66,6 @@
         </div>
       </div>
     </div>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
