--- a/age-calculator-app-main/index.html
+++ b/age-calculator-app-main/index.html
@@ -27,14 +27,17 @@
         <div class="part">
           <span class="dmy">Day</span>
           <input class="day-input" type="text" placeholder="dd" />
+          <span class="required required_day">This field is required</span>
         </div>
         <div class="part">
           <span class="dmy">Month</span>
           <input class="month-input" type="text" placeholder="mm" />
+          <span class="required required_month">This field is required</span>
         </div>
         <div class="part">
           <span class="dmy">Year</span>
           <input class="year-input" type="text" placeholder="yyyy" />
+          <span class="required required_year">This field is required</span>
         </div>
       </div>
       <div class="divider">
